# taca

./: .gitignore  .gitmodules  Cargo.toml  Containerfile  README.md  build-image.sh  build-opt.sh  build.cmd  build.sh  image-build.sh  image-push.sh  package.json  run.sh
.github/workflows/: deploy.yml
cana/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite-docs.config.ts  vite.config.ts  webpack.config.js
cana/public/: demo.html  hi.taca
cana/src/: drawing.ts  lib.rs  main.ts
crates/taca/: Cargo.toml
crates/taca/src/: lib.rs
crates/wager/: README.md
docs/demo/: index.html  taca.js  taca.wasm
docs/demo/apps/zig/: hi.taca  hi.wasm
examples/: hello.zig  index.html  taca.js
examples/as/: asconfig.json  package-lock.json  package.json
examples/as/assembly/: index.ts
examples/c3/: .gitignore
examples/c3/fly/: README.md  build.sh  project.json
examples/c3/fly/src/: control.c3  data.c3  draw.c3  gem.glb  glb.c3  light.glb  main.c3  shader.hlsl  ship.glb  taca.c3  target.glb  util.c3
examples/cpp/: .clang-format
examples/cpp/music/: build.sh
examples/cpp/music/src/: app.hpp  control.hpp  draw.hpp  main.cpp  markers.hpp  musicbox-data.hpp  musicbox-mp3.hpp  resources.hpp  shader.frag.glsl  shader.vert.glsl  songs.hpp  taca.h  taca.hpp  taca.wit  vec.hpp
examples/crystal/walk/: build.sh  hi.cr
examples/nelua/: build.sh  main.nelua  minify.js  noise.wgsl  run.sh  shader.wgsl  stars.wgsl  support.nelua
examples/nelua/walk/: build.sh  view.sh
examples/nelua/walk/src/: common.nelua  control.nelua  draw.nelua  frame.nelua  game.nelua  gd.lua  hi.nelua  macros.lua  main.nelua  resources.nelua  shader.wgsl  support.nelua  taca.nelua  tiles.nelua  util.nelua  walk.nelua
examples/nim/textbox/: build-lib.sh  build.sh  textbox.nimble
examples/nim/textbox/src/: config.nims  shader.wgsl  taca.nim  textbox.nim
examples/odin/guess/: build.sh
examples/odin/guess/src/: main.odin
examples/wit/: README.md
examples/zig/: build.sh  data.zig  explore-simple.zig  explore-webgpu.zig  minify.js  pipeline.zig  shader-no-texture.wgsl  shader.wgsl
examples/zig/hi/: README.md  build.sh  build.zig  build.zig.zon
examples/zig/hi-taca/: build.zig  build.zig.zon  hi-taca.wat
examples/zig/hi-taca/src/: main.zig
examples/zig/hi/src/: hi.zig  hi2.zig  main.zig  shader.hlsl  shader.opt.spv  shader.spv  shader.wgsl  shader2.wgsl  taca.zig
include/: taca.h
include/taca/: README.md  draw.h  gpu.h  taca.h  window.h
include/tacana/: tacana.h
include/tactic/: tactic.h
native/: Cargo.toml
native/src/: app.rs  display.rs  gpu.rs  key.rs  main.rs  sound.rs  text.rs  wasi.rs
old/: Cargo.toml.txt  README.md  build.sh  package-lock.json  run.sh
old/examples/as/: hello.ts
old/examples/nelua/: main.nelua
old/examples/zig/: data.zig  explore-simple.zig  explore-webgpu.zig  pipeline.zig
old/simple/: run.sh
old/simple/examples/as/: package.json
old/simple/examples/zig/: explore-taca.zig
old/simple/src/: c.zig
old/src/: taca.zig  window.rs
simple/: README.md
simple/examples/as/: package-lock.json
simple/examples/zig/: build.sh
simple/src/: taca.zig
site/demo/: README.md  index.html
src/: c.zig  gpu.rs  hi.wasm  hi.wat  lib.rs  main.rs  platform.rs  shader.opt.spv  shaders.rs  system.rs  tacana.zig  tactic.zig  wasmic.rs  webgpu.rs  wgpu_native.rs  window.rs
src/wasmic/: help.rs  hi.wasm  hi.wat  mod.rs  wasmic_browser.rs  wasmic_wasmer.rs
static/: index.html  taca.js
taca/: Cargo.toml
taca/src/: app.rs  gpu.rs  platform.rs  shader.spv  shader.wgsl  shaders.rs  text.rs
taca/src/wasmic/: help.rs  mod.rs  wasmic_browser.rs  wasmic_wasmer.rs
waca/: Cargo.toml
waca/src/: app.rs  display.rs  gpu.rs  main.rs  text.rs
web/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
web/src/: drawing.ts  gpu.ts  key.ts  lib.rs  main.ts  part.ts  util.ts  wasi.ts
(+16 files in other folders)
