[package]
name = "taca"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
# For WebGL2 support.
miniquad = { git = "https://github.com/not-fl3/miniquad/" }
naga = { version = "0.20.0", features = ["glsl-out", "msl-out", "wgsl-in"] }

[profile.release-lto]
inherits = "release"
lto = true
panic = 'abort'
opt-level = "s"
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true
