[package]
name = "taca"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.16.1"
clap = { version = "4.5.8", features = ["derive"] }
glyphon = { git = "https://github.com/grovesNL/glyphon.git", rev = "9def85304266605d2bd93fc4bf33a294db67f3d3" }
kira = "0.9.5"
lz4_flex = "0.11.3"
pollster = "0.3.0"
rustls-platform-verifier = "0.4.0"
wasmer = "4.3.2"
wasmer-types = "4.3.2"
wgpu = { version = "22.1.0", features = ["spirv"] }
winit = "0.30.3"

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["jpeg", "png"]

[dependencies.naga]
version = "22.1.0"
default-features = false
features = ["spv-in"]
