[package]
name = "waca"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.16.1"
clap = { version = "4.5.8", features = ["derive"] }
lz4_flex = "0.11.3"
pollster = "0.3.0"
wasmer = "4.3.2"
wasmer-types = "4.3.2"
wgpu = { version = "22.0.0", features = ["spirv"] }
winit = "0.30.3"

[dependencies.naga]
version = "0.20.0"
default-features = false
features = ["spv-in"]
